# Include

# Compiler Settings

# Find Packages

# Sources
set(${CMAKE_PROJECT_NAME}_SOURCES

)

# Headers
set(${CMAKE_PROJECT_NAME}_HEADERS

)

# Include Paths

# Targets
# add_executable(${CMAKE_PROJECT_NAME}
#     ${${CMAKE_PROJECT_NAME}_SOURCES}
# )

# add_library(${CMAKE_PROJECT_NAME}
#     ${${CMAKE_PROJECT_NAME}_SOURCES}
# )

# Link Libraries